kubernetes/manifests/apps/service-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: 101.101.0.133:5000/service-a:v3
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
